@@ -1,1 +1,1 @@
-Kommander 1.0alpha5
+Kommander 1.0alpha6
